Fix: Made code more monotonous